--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -12,11 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/photo1" />
@@ -26,23 +27,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="24dp"
+        android:paddingLeft="20dp"
         android:paddingTop="24dp"
-        android:paddingRight="24dp"
+        android:paddingRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
         <!-- Email Label -->
 
-        <Switch
-            android:id="@+id/switch2"
+
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Преподаватель"
-            android:textColorHint="@color/design_default_color_primary_dark"
-            android:textColorLink="@color/design_default_color_primary"
-            android:textSize="22dp" />
+            android:padding="0dp">
+
+            <ToggleButton
+                android:id="@+id/toggleButton3"
+                android:layout_width="173dp"
+                android:layout_height="wrap_content"
+                android:text="ToggleButton"
+                android:textOff="Преподаватель"
+                android:textOn="Преподаватель"
+                android:checked="true"
+                app:layout_constraintBottom_toBottomOf="@+id/toggleButton4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/toggleButton4" />
+
+            <ToggleButton
+                android:id="@+id/toggleButton4"
+                android:layout_width="174dp"
+                android:layout_height="wrap_content"
+                android:text="ToggleButton"
+                android:textOff="Студент"
+                android:textOn="Студент"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -54,7 +79,6 @@
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="16dp"
                 android:background="@drawable/custom_edit_text"
                 android:drawableRight="@drawable/user"
                 android:hint="Email"
@@ -102,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:gravity="center"
-            android:text="Если у вас нет аккаунта - создайте его"
+            android:text="Если у вас нет аккаунта -  зарегистрируйтесь"
             android:textSize="16dip" />
 
     </LinearLayout>
