--- a/app/src/main/res/layout/row_item_stud.xml
+++ b/app/src/main/res/layout/row_item_stud.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/tv_date"
+        android:id="@+id/tV_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
