--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#4EAFE0</color>
     <color name="colorPrimaryDark">#2D95CA</color>
     <color name="darkerBlue">#0A78CE</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FFCF50</color>
     <color name="blue">#1a09d6</color>
     <color name="red">#8B0000</color>
     <color name="primary">#F9EBEA</color>
