--- a/app/src/main/res/layout/lesson_input_form.xml
+++ b/app/src/main/res/layout/lesson_input_form.xml
@@ -60,7 +60,7 @@
     <Spinner
         android:id="@+id/spinner_subject"
         android:layout_width="0dp"
-        android:layout_height="46dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
