--- a/app/src/main/res/menu/menu_session.xml
+++ b/app/src/main/res/menu/menu_session.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".SessionActivity">
-    <item
-        android:id="@+id/menu_date"
-        android:title="DD/MM/YY"
-        app:showAsAction="always" />
+
+    <item android:id="@+id/btn_importExcel"
+        android:title="Скачать список студентов"
+        android:onClick="importExcel"/>
 </menu>
